# seminarium

./: CMakeLists.txt  main.cpp
base/: CMakeLists.txt  baseState.hpp  baseWorkflow.hpp  userdata.hpp
database/: CMakeLists.txt  database.cpp  database.hpp
states/: CMakeLists.txt  authenticateState.hpp  finishLoginState.hpp  insertUsernameState.hpp  loginState.hpp
workflow/: CMakeLists.txt  loginWorkflow.hpp
